// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Head renders 1`] = `
<head>
  <meta
    charSet="UTF-8"
  />
  <title>
    some title preface
     
    some title
  </title>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "<<CSS:../reports/automated-checks-report.css>>",
      }
    }
  />
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "some style sheet",
      }
    }
  />
</head>
`;

exports[`ReporterHead renders 1`] = `
<Head
  bundledStyles={
    Object {
      "styleSheet": "<<CSS:../../packages/report/bundle/report.css>>",
    }
  }
  title="automated checks result"
  titlePreface="Accessibility Insights"
/>
`;

exports[`WebReportHead renders 1`] = `
<Head
  bundledStyles={
    Object {
      "styleSheet": "<<CSS:detailsView.css>>",
    }
  }
  title="FastPass results"
  titlePreface="Accessibility Insights for Web"
/>
`;
